--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -4,12 +4,84 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
  */
 
+html{
+	height:100%;
+}
 body {
-  padding-top: 54px;
+  padding-top: 70px;
+  height:100%;
+}
+
+.slide-image {
+	width: 100%;
+}
+.carousel-holder {
+	margin-bottom: 30px;
+}
+
+.carousel-control,
+.item {
+	margin-radius: 4px;
+}
+
+.caption {
+	height: 130px;
+	overflow: hidden;
+}
+
+.thumbnail img {
+	width: 100%
+}
+
+.rating {
+	padding-right: 10px;
+	padding-left: 10px;
+	color: #d17581;
+}
+
+.thumbnail {
+	padding: 0;
+}
+
+.thumbnail .caption-full {
+	padding: 9px;
+	color: #333;
 }
 
 @media (min-width: 992px) {
   body {
     padding-top: 56px;
   }
+}
+
+footer {
+	margin: 0;
+}
+
+/* Custom Styling */
+
+.wrapper {
+	min-height: 100%;
+	position: relative;
+}
+
+.content {
+	padding-bottom: 60px; /*height of the footer*/
+}
+
+/*.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0 or 15px;
+   height: 60px;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
+}
+*/
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
